tests/expectations/compiler/structs/struct_function_namespace_conflict_fail.out
Error [EAST0372017]: The name `Foo` is defined multiple times.
    --> compiler-test:7:4
     |
   3 |   struct Foo {
     |          ^^^ previous definition of `Foo` here
   ...
   7 |   fn Foo() {}
     |      ^^^ `Foo` redefined here
